[package]
name = "aoc2022-rust"
version = "0.1.0"
authors = ["Marcin Puc <tranzystorek.io@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "d01p1"
path = "src/days/d01p1.rs"

[dependencies]
aoc-utils = "0.4"
itertools = "0.10"
